# hs-action

./: .dir-locals.el  .envrc  .gitignore  .stylish-haskell.yaml  LICENSE  README.md  README.org  brittany.yaml  cabal.haskell-ci  cabal.project  flake.nix  fourmolu.yaml  hie.yaml  hs-action.cabal
.github/workflows/: haskell-ci.yml
app/: Main.hs
bench/: Main.hs
src/: Lib.hs
test/: Driver.hs  ExampleTest.hs  TestMain.hs
